# RustRansom

./: .gitignore  Cargo.toml  README.md  cert.pem  key.pem
exfiltrated_files/: readme.txt
src/: client.rs  server.rs
